--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@
         <a href="./staff/" class="card-link">
           <span class="card-icon">👥</span>
           <div class="card-title">Staff Management Dashboard</div>
-          <div class="card-description">Monitor staff performance, shortages, and operational efficiency.</div>
+          <div class="card-description">Monitor staff performance, and shortages.</div>
         </a>
       </div>
       
       <div class="card">
-        <a href="./Product/" class="card-link">
+        <a href="./product/" class="card-link">
           <span class="card-icon">📊</span>
           <div class="card-title">Product Analysis Dashboard</div>
           <div class="card-description">Comprehensive product performance analysis with sales trends.</div>
