--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
       </div>
       
       <div class="card">
-        <a href="./product/" class="card-link">
+        <a href="./Product/" class="card-link">
           <span class="card-icon">📊</span>
           <div class="card-title">Product Analysis Dashboard</div>
           <div class="card-description">Comprehensive product performance analysis with sales trends.</div>
