--- a/Gas/index.html
+++ b/Gas/index.html
@@ -7,54 +7,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
+            font-family: 'Segoe UI', Tahoma, sans-serif;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: #333;
+            margin: 0; padding: 20px;
         }
-        .container { max-width: 1400px; margin: 0 auto; }
-        .header { text-align: center; color: white; margin-bottom: 30px; animation: fadeIn 0.8s ease-in; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
-        .header h1 { font-size: 2.5em; margin-bottom: 10px; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); }
-        .header p { font-size: 1.2em; opacity: 0.9; }
+        .container { max-width: 1300px; margin: auto; }
+        .header { text-align: center; color: white; margin-bottom: 30px; }
         .refresh-btn {
             background: white; color: #667eea; border: none; padding: 12px 24px;
-            border-radius: 25px; font-size: 1em; font-weight: bold; cursor: pointer;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2); transition: all 0.3s ease; margin-top: 15px;
+            border-radius: 25px; cursor: pointer; font-weight: bold;
         }
-        .refresh-btn:hover { transform: scale(1.05); box-shadow: 0 7px 20px rgba(0,0,0,0.3); }
-        .refresh-btn:disabled { opacity: 0.6; cursor: not-allowed; }
-        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px; }
-        .stat-card {
-            background: white; border-radius: 15px; padding: 25px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2); transition: transform 0.3s ease, box-shadow 0.3s ease;
-            animation: slideUp 0.5s ease-out forwards; opacity: 0;
-        }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
-        .stat-card:nth-child(1) { animation-delay: 0.1s; } .stat-card:nth-child(2) { animation-delay: 0.2s; }
-        .stat-card:nth-child(3) { animation-delay: 0.3s; } .stat-card:nth-child(4) { animation-delay: 0.4s; }
-        .stat-card:nth-child(5) { animation-delay: 0.5s; } .stat-card:nth-child(6) { animation-delay: 0.6s; }
-        .stat-card:hover { transform: translateY(-10px); box-shadow: 0 15px 40px rgba(0,0,0,0.3); }
-        .stat-card h3 { color: #667eea; font-size: 0.9em; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 10px; }
-        .stat-card .value { font-size: 2.5em; font-weight: bold; color: #333; }
-        .stat-card .label { color: #666; font-size: 0.9em; margin-top: 5px; }
-        .charts-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); gap: 20px; margin-bottom: 30px; }
-        @media (max-width: 768px) { .charts-grid { grid-template-columns: 1fr; } }
-        .chart-card { background: white; border-radius: 15px; padding: 25px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
-        .chart-card:hover { box-shadow: 0 15px 40px rgba(0,0,0,0.3); }
-        .chart-card h2 { color: #667eea; margin-bottom: 20px; font-size: 1.3em; }
-        .table-card { background: white; border-radius: 15px; padding: 25px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); overflow-x: auto; }
+        .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); gap: 20px; margin-bottom: 30px; }
+        .stat-card { background: white; padding: 20px; border-radius: 10px; text-align: center; }
+        .charts-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(500px,1fr)); gap: 20px; }
+        .chart-card { background: white; border-radius: 10px; padding: 20px; }
+        .table-card { background: white; border-radius: 10px; padding: 20px; margin-top: 30px; overflow-x: auto; }
         table { width: 100%; border-collapse: collapse; }
-        th, td { padding: 12px; text-align: left; border-bottom: 1px solid #ddd; }
-        th { background-color: #667eea; color: white; font-weight: 600; position: sticky; top: 0; z-index: 10; }
-        tr:hover { background-color: #f5f5f5; }
-        .loading { text-align: center; color: white; font-size: 1.5em; padding: 50px; }
-        .spinner { border: 4px solid rgba(255,255,255,0.3); border-top: 4px solid white; border-radius: 50%; width: 50px; height: 50px; animation: spin 1s linear infinite; margin: 20px auto; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        .error { background: #ff6b6b; color: white; padding: 20px; border-radius: 10px; text-align: center; margin: 20px auto; max-width: 600px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
-        .last-updated { text-align: center; color: white; font-size: 0.9em; margin-top: 10px; opacity: 0.8; }
+        th, td { border-bottom: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background: #667eea; color: white; position: sticky; top: 0; }
+        .loading { text-align: center; color: white; }
+        .spinner { border: 4px solid rgba(255,255,255,0.3); border-top: 4px solid white; border-radius: 50%; width: 40px; height: 40px; margin: 10px auto; animation: spin 1s linear infinite; }
+        @keyframes spin { from {transform: rotate(0);} to {transform: rotate(360deg);} }
     </style>
 </head>
 <body>
@@ -63,20 +38,19 @@
             <h1>🔥 Gas Sales Dashboard</h1>
             <p>September + October 2025 Overview</p>
             <button class="refresh-btn" onclick="loadData()" id="refreshBtn">🔄 Refresh Data</button>
-            <div class="last-updated" id="lastUpdated"></div>
         </div>
 
         <div id="loading" class="loading">
             <div class="spinner"></div>
             <p>Loading data...</p>
         </div>
-        <div id="error" style="display: none;"></div>
+
         <div id="dashboard" style="display: none;">
             <div class="stats-grid" id="statsGrid"></div>
 
             <div class="charts-grid">
                 <div class="chart-card">
-                    <h2>📈 Daily Sales Trend (Total KGs)</h2>
+                    <h2>📈 Daily Sales Trend</h2>
                     <canvas id="dailyTrendChart"></canvas>
                 </div>
                 <div class="chart-card">
@@ -85,7 +59,7 @@
                 </div>
             </div>
 
-            <div class="chart-card" style="margin-bottom: 30px;">
+            <div class="chart-card">
                 <h2>📊 Product Performance Over Time</h2>
                 <canvas id="productTrendChart"></canvas>
             </div>
@@ -98,9 +72,10 @@
     </div>
 
     <script>
-        // 🔗 Combined September + October
         const CSV_URLS = [
+            // September
             'https://docs.google.com/spreadsheets/d/e/2PACX-1vSy-gNhdVGwWtpwJIZ2358iDhM0RQlQoen-_wayM6Dc0rkp9mRx40uLo4ia2QD3Kr_QNn75xp8OJKEx/pub?gid=1346158160&single=true&output=csv',
+            // October
             'https://docs.google.com/spreadsheets/d/e/2PACX-1vS-k0UvgWAF628NHqYnQ58rXfOpyMnrqnRa19R-icgOlkeK2yEhP3hg2_9CtwYCHZ08ciLYioLZNTc7/pub?gid=285948413&single=true&output=csv'
         ];
 
@@ -111,61 +86,131 @@
             const btn = document.getElementById('refreshBtn');
             btn.disabled = true;
             btn.textContent = '⏳ Loading...';
-
             document.getElementById('loading').style.display = 'block';
-            document.getElementById('error').style.display = 'none';
             document.getElementById('dashboard').style.display = 'none';
 
-            let loadedData = [];
-
-            function loadNext(index) {
-                if (index >= CSV_URLS.length) {
-                    salesData = mergeMonthlyData(loadedData);
+            Promise.all(CSV_URLS.map(url => fetch(url).then(r => r.text())))
+                .then(csvs => {
+                    const allData = csvs.map(csv => Papa.parse(csv, { header: true, dynamicTyping: true }).data);
+                    salesData = mergeMonthlyData(allData);
                     processAndDisplayData();
                     btn.disabled = false;
                     btn.textContent = '🔄 Refresh Data';
-                    return;
-                }
-
-                Papa.parse(CSV_URLS[index], {
-                    download: true,
-                    header: true,
-                    dynamicTyping: true,
-                    skipEmptyLines: true,
-                    transformHeader: (h) => h.trim(),
-                    complete: function(results) {
-                        const clean = results.data.filter(r => {
-                            const firstCol = Object.keys(r)[0];
-                            return r[firstCol] && r[firstCol].toString().trim() !== '';
-                        });
-                        loadedData.push(clean);
-                        loadNext(index + 1);
-                    },
-                    error: function(err) {
-                        showError('Failed to load data: ' + err.message);
-                        btn.disabled = false;
-                        btn.textContent = '🔄 Refresh Data';
-                    }
+                })
+                .catch(err => {
+                    console.error(err);
+                    alert('Error loading data: ' + err.message);
+                    btn.disabled = false;
+                    btn.textContent = '🔄 Refresh Data';
                 });
-            }
-            loadNext(0);
         }
 
-        // 🔄 Merge both months by matching row names
-        function mergeMonthlyData(monthlyArrays) {
-            if (monthlyArrays.length === 1) return monthlyArrays[0];
-            const [sepData, octData] = monthlyArrays;
+        function mergeMonthlyData([sepData, octData]) {
             const merged = [];
-
             for (let i = 0; i < sepData.length; i++) {
-                const combinedRow = { ...sepData[i] };
+                const row = { ...sepData[i] };
                 const octRow = octData[i] || {};
                 for (const key in octRow) {
-                    if (key !== Object.keys(octRow)[0]) combinedRow[key] = octRow[key];
+                    if (key !== Object.keys(octRow)[0]) row[key] = octRow[key];
                 }
-                merged.push(combinedRow);
+                merged.push(row);
             }
             return merged;
+        }
+
+        function processAndDisplayData() {
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById('dashboard').style.display = 'block';
+            displayStats(calculateStats());
+            createDailyTrendChart();
+            createProductDistributionChart();
+            createProductTrendChart();
+            createDataTable();
+        }
+
+        function calculateStats() {
+            let total = 0;
+            let products = 0;
+            salesData.forEach(row => {
+                for (const key in row) {
+                    if (!isNaN(row[key]) && key !== Object.keys(row)[0]) total += row[key];
+                }
+                products++;
+            });
+            return { total, avg: (total / products).toFixed(1) };
+        }
+
+        function displayStats(stats) {
+            document.getElementById('statsGrid').innerHTML = `
+                <div class="stat-card"><h3>Total Sales</h3><p>${stats.total.toLocaleString()} KGs</p></div>
+                <div class="stat-card"><h3>Average/Product</h3><p>${stats.avg}</p></div>
+            `;
+        }
+
+        // ✅ Dynamic month-aware daily trend
+        function createDailyTrendChart() {
+            const labels = [];
+            const totals = [];
+            const allKeys = Object.keys(salesData[0]).slice(1);
+
+            allKeys.forEach((key, i) => {
+                let month = i < 30 ? 'Sep' : 'Oct';
+                labels.push(`${month} ${i < 30 ? i + 1 : i - 29}`);
+                let total = 0;
+                salesData.forEach(row => total += Number(row[key]) || 0);
+                totals.push(total);
+            });
+
+            if (charts.dailyTrend) charts.dailyTrend.destroy();
+            charts.dailyTrend = new Chart(document.getElementById('dailyTrendChart'), {
+                type: 'line',
+                data: { labels, datasets: [{ label: 'Total KGs', data: totals, borderColor: '#667eea', fill: false }] },
+                options: { responsive: true, plugins: { legend: { display: false } } }
+            });
+        }
+
+        function createProductDistributionChart() {
+            const products = salesData.map(r => Object.values(r)[0]);
+            const totals = salesData.map(row => {
+                let sum = 0;
+                for (const key in row) if (!isNaN(row[key]) && key !== Object.keys(row)[0]) sum += row[key];
+                return sum;
+            });
+
+            if (charts.productDist) charts.productDist.destroy();
+            charts.productDist = new Chart(document.getElementById('productDistChart'), {
+                type: 'bar',
+                data: { labels: products, datasets: [{ label: 'Total KGs', data: totals, backgroundColor: '#764ba2' }] },
+                options: { responsive: true, plugins: { legend: { display: false } } }
+            });
+        }
+
+        function createProductTrendChart() {
+            const labels = Object.keys(salesData[0]).slice(1);
+            const datasets = salesData.map((row, i) => ({
+                label: Object.values(row)[0],
+                data: labels.map(k => row[k]),
+                borderWidth: 2, fill: false,
+                borderColor: `hsl(${i * 40},70%,50%)`
+            }));
+
+            if (charts.productTrend) charts.productTrend.destroy();
+            charts.productTrend = new Chart(document.getElementById('productTrendChart'), {
+                type: 'line',
+                data: { labels, datasets },
+                options: { responsive: true }
+            });
+        }
+
+        function createDataTable() {
+            const keys = Object.keys(salesData[0]);
+            const table = document.getElementById('dataTable');
+            let html = '<thead><tr>' + keys.map(k => `<th>${k}</th>`).join('') + '</tr></thead><tbody>';
+            salesData.forEach(row => {
+                html += '<tr>' + keys.map(k => `<td>${row[k] || ''}</td>`).join('') + '</tr>';
+            });
+            html += '</tbody>';
+            table.innerHTML = html;
         }
         
         function processAndDisplayData() {
