--- a/Gas/index.html
+++ b/Gas/index.html
@@ -39,7 +39,10 @@
             <p>September + October 2025 Overview</p>
             <button class="refresh-btn" onclick="loadData()" id="refreshBtn">🔄 Refresh Data</button>
         </div>
-
+    <div id="lastUpdated" style="margin-top:8px; font-size:13px; color:#dcdcdc; font-style:italic;">
+    Last updated: (loading…)
+    </div>
+        
         <div id="loading" class="loading">
             <div class="spinner"></div>
             <p>Loading data...</p>
