Fix formatting of dataSources in index.html

--- a/Product/index.html
+++ b/Product/index.html
@@ -527,7 +527,7 @@
     // ============================================================================
     
     const dataSources = {
-      "October": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-k0UvgWAF628NHqYnQ58rXfOpyMnrqnRa19R-icgOlkeK2yEhP3hg2_9CtwYCHZ08ciLYioLZNTc7/pub?gid=1772695434&single=true&output=csv"
+      "October": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-k0UvgWAF628NHqYnQ58rXfOpyMnrqnRa19R-icgOlkeK2yEhP3hg2_9CtwYCHZ08ciLYioLZNTc7/pub?gid=1772695434&single=true&output=csv",
       // Add more months here as needed:
       "November": "https://docs.google.com/spreadsheets/d/e/2PACX-1vT7ZVd1O2MMZPQ-eNdmAdfyzuTXLa-KOMwxFibhN0c5nBm1TywXnsyElaKeifVZHH3HOnTL8xZkiHlJ/pub?gid=1772695434&single=true&output=csv",
       // "December": "YOUR_CSV_LINK_HERE",
