--- a/staff_dashboard.html
+++ b/staff_dashboard.html
@@ -488,6 +488,7 @@
     // ============================================================================
     
     const dataSources = {
+      "December": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS6iyMOviuAKEPtY-l7IOcbpkpWIm6hHVz5ongtl9A6xv2idj2VqJ5shpPcteJ-QAMsdQvMgYUpaQec/pub?gid=993195447&single=true&output=csv",
       "November": "https://docs.google.com/spreadsheets/d/e/2PACX-1vT7ZVd1O2MMZPQ-eNdmAdfyzuTXLa-KOMwxFibhN0c5nBm1TywXnsyElaKeifVZHH3HOnTL8xZkiHlJ/pub?gid=993195447&single=true&output=csv",
       "October": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-k0UvgWAF628NHqYnQ58rXfOpyMnrqnRa19R-icgOlkeK2yEhP3hg2_9CtwYCHZ08ciLYioLZNTc7/pub?gid=993195447&single=true&output=csv",
       "September": "https://docs.google.com/spreadsheets/d/e/2PACX-1vRNw7hn2wzYu3ATj3LVB5NT8oKO0PLkyTI_SN7owSvlnoJm0k4mvAW6nclDwF6Trtqsdb3wCMpM9imI/pub?gid=0&single=true&output=csv"
