--- a/Product/product_dashboard.html
+++ b/Product/product_dashboard.html
@@ -472,6 +472,7 @@
     // ============================================================================
     
     const dataSources = {
+      "December": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS6iyMOviuAKEPtY-l7IOcbpkpWIm6hHVz5ongtl9A6xv2idj2VqJ5shpPcteJ-QAMsdQvMgYUpaQec/pub?gid=1772695434&single=true&output=csv",
       "November": "https://docs.google.com/spreadsheets/d/e/2PACX-1vT7ZVd1O2MMZPQ-eNdmAdfyzuTXLa-KOMwxFibhN0c5nBm1TywXnsyElaKeifVZHH3HOnTL8xZkiHlJ/pub?gid=1772695434&single=true&output=csv",
       "October": "https://docs.google.com/spreadsheets/d/e/2PACX-1vS-k0UvgWAF628NHqYnQ58rXfOpyMnrqnRa19R-icgOlkeK2yEhP3hg2_9CtwYCHZ08ciLYioLZNTc7/pub?gid=1772695434&single=true&output=csv",
     };
